; ModuleID = '/home/carl/AnghaBench/libgit2/tests/online/extr_badssl.c_test_online_badssl__old_cipher.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/online/extr_badssl.c_test_online_badssl__old_cipher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@GIT_CLONE_OPTIONS_INIT = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@cert_check_assert_invalid = common dso_local global i32 0, align 4
@g_has_ssl = common dso_local global i32 0, align 4
@GIT_ECERTIFICATE = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"https://rc4.badssl.com/fake.git\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"./fake\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_online_badssl__old_cipher() #0 {
  %1 = alloca %struct.TYPE_8__, align 4
  %2 = bitcast %struct.TYPE_8__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %2, i8* align 4 bitcast (%struct.TYPE_8__* @GIT_CLONE_OPTIONS_INIT to i8*), i64 4, i1 false)
  %3 = load i32, i32* @cert_check_assert_invalid, align 4
  %4 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %1, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 0
  store i32 %3, i32* %6, align 4
  %7 = call i32 (...) @cl_skip()
  %8 = load i32, i32* @g_has_ssl, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %12, label %10

10:                                               ; preds = %0
  %11 = call i32 (...) @cl_skip()
  br label %12

12:                                               ; preds = %10, %0
  %13 = load i32, i32* @GIT_ECERTIFICATE, align 4
  %14 = call i32 @git_clone(i32* @g_repo, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), %struct.TYPE_8__* null)
  %15 = call i32 @cl_git_fail_with(i32 %13, i32 %14)
  %16 = load i32, i32* @GIT_ECERTIFICATE, align 4
  %17 = call i32 @git_clone(i32* @g_repo, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), %struct.TYPE_8__* %1)
  %18 = call i32 @cl_git_fail_with(i32 %16, i32 %17)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_skip(...) #2

declare dso_local i32 @cl_git_fail_with(i32, i32) #2

declare dso_local i32 @git_clone(i32*, i8*, i8*, %struct.TYPE_8__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
